<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.page.welcome.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="256dp"
            android:layout_height="128dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/desc_ic_app"
            android:src="@drawable/ic_app_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHeading"
            style="@style/Text.H1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:gravity="center"
            android:text="@string/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgIcon"
            tools:alpha="100" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/Text.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:gravity="center"
            android:text="@string/welcome_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading"
            tools:alpha="100" />

        <com.krissphi.id.mykisah.ui.component.CustomButton
            android:id="@+id/btnRegist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:alpha="0"
            android:text="@string/regist"
            app:buttonVariant="secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnLogin"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage"
            app:layout_constraintVertical_bias="0.0"
            tools:alpha="100" />

        <com.krissphi.id.mykisah.ui.component.CustomButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:alpha="0"
            android:text="@string/login"
            app:buttonVariant="primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/btnRegist"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage"
            tools:alpha="100" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>