<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_story"
        android:icon="@drawable/outline_add_circle_24"
        android:title="@string/story_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_look_map"
        android:icon="@drawable/outline_map_24"
        android:title="@string/maps"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

</menu>